save function add and alignment issues fixed

--- a/css/style.css
+++ b/css/style.css
@@ -78,10 +78,6 @@ body {
       justify-content: center;
       }
   
-  .col-sm-1  {
-        padding: px 0 0 0px;
-        
-        }
 
   .border {
       padding: 10px 30px 0 0 ;
